[gd_scene load_steps=5 format=3 uid="uid://main_menu_001"]

[ext_resource type="Script" path="res://game/features/ui/main_menu.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://game/features/ui/settings_menu.tscn" id="2_scene"]
[ext_resource type="Theme" path="res://game/shared/ui_theme.tres" id="3_theme"]
[ext_resource type="Texture2D" path="res://assets/StartScreenNewImage.jpg" id="4_menu_art"]

[node name="MainMenu" type="Control"]
script = ExtResource("1_script")
theme = ExtResource("3_theme")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_menu_art")
expand_mode = 1
stretch_mode = 5

[node name="NewGameButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -10.0
offset_right = 210.0
offset_bottom = 54.0
text = ""
modulate = Color(1, 1, 1, 0)

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 60.0
offset_right = 210.0
offset_bottom = 124.0
text = ""
modulate = Color(1, 1, 1, 0)
disabled = true

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 142.0
offset_right = 210.0
offset_bottom = 206.0
text = ""
modulate = Color(1, 1, 1, 0)

[node name="WeavingButton" type="Button" parent="."]
visible = false
focus_mode = 0
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 224.0
offset_right = 210.0
offset_bottom = 288.0
text = ""
modulate = Color(1, 1, 1, 0)

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 224.0
offset_right = 210.0
offset_bottom = 288.0
text = ""
modulate = Color(1, 1, 1, 0)

[node name="SettingsMenu" parent="." instance=ExtResource("2_scene")]


